force-app/main/default/objects/Project__c/fields/BGV__c.field-meta.xml
<CustomField>
    <fullName>BGV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BGV</label>
    <type>Checkbox</type>
</CustomField>