force-app/main/default/objects/Project__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <label>Project Id</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>