force-app/main/default/objects/Project__c/fields/Project_value__c.field-meta.xml
<CustomField>
    <fullName>Project_value__c</fullName>
    <inlineHelpText>1000</inlineHelpText>
    <label>Project value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>