force-app/main/default/objects/Project__c/fields/Total_Child_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Count__c</fullName>
    <label>Total Child Count</label>
    <summaryForeignKey>staff__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>