force-app/main/default/objects/Project__c/fields/Total_Child_Salsry__c.field-meta.xml
<CustomField>
    <fullName>Total_Child_Salsry__c</fullName>
    <label>Total Child Salsry</label>
    <summarizedField>staff__c.Salary__c</summarizedField>
    <summaryForeignKey>staff__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>