force-app/main/default/objects/Project__c/validationRules/Budge_control.validationRule-meta.xml
<ValidationRule>
    <fullName>Budge_control</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Child_Salsry__c &gt; Project_value__c</errorConditionFormula>
    <errorMessage>Project Budget Exceeded</errorMessage>
</ValidationRule>